<resources>
    <string name="app_name">Rent Junction</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text1">It doesn\'t matter how big or heavy your attacker is because you can beat anyone if you know where the most vulnerable spots are. The main ones are the eyes, nose, throat, chest, knees, and groin. </string>
    <string name="text2">Grab his little finger and his ring finger with one hand, and his middle and index finger with the other and bend the wrist forward.\nIf you cant grab your opponent hand, hit him with a fist or with a finger between the collarbones or into his Adam apple.</string>
    <string name="text3">The most obvious area for an attack is the groin. All self-defense courses advise aiming for this area.Hitting this area will literally paralyze the attacker and you will have just enough time to escape.</string>
    <string name="text4">If you were grabbed from the front and you cant lift your hands, do the following: move your hands forward and make a fist in front of your pelvis. This will create enough room between you and the attacker.\n After that, hit the attacker nose with your forehead. This will make the attacker move away from you. Now hit him in the groin with your knee.</string>
    <string name="text5">You can easily escape a stronghold if you remember the rule of thumb rotate your arm to the side of the attackers thumb.\nIf he is holding your arm tightly, rotate your wrist toward the thumb. When your arm is under the attackers, pull your arm as strongly as you can.</string>
    <string name="text6">Attackers often come from the back because this is the easiest way to hold the victims arms so that they cant move them.</string>
    <string name="text7">Hit the attackers temple, jaw, or nose with an arched move. After this, the attacker will take a few steps back. Now hit the belly or chest and run</string>
    <string name="text21">The age old classic pepper spray is a magical weapon. Its excruciatingly painful and can be used from a distance too. It may end up irritating your eyes too, so please be careful about that</string>
    <string name="text22">A sharp pointed pencil is extremely painful, if used right. Its an underrated weapon and can be used to protect yourself from anyone who wants to harm you. Its easy to carry, especially into areas which dont allow pepper sprays and tasers. The key is to keep it sharpened at all times</string>
    <string name="text23">Tasers are one of the most common self defense weapons that women carry and they work wonders. It takes a single button to send mini lightning bolts down an attackers body</string>
    <string name="text24">The most multi faceted tool, the Swiss Knife is famous for being an all-in-one survival kit. Right from having a corkscrew, tweezer, scissor to screwdrivers, it is very handy. The best part is, it has many blades and pointed extensions that can seriously injure someone</string>
    <string name="text25">It is always recommended to share your locations using your phone application, but in any event your phone cannot send your location in that case a GPS tracker is very handy solution for you.</string>
    <string name="text26">Nothing spooks an assualter more than a deafening, loud, whistle that can attract attention to his act. Whistles can be as small as a thumb and must be carried by all women.</string>
    <string name="url1">Buy this at \: https://amzn.eu/d/5EhbjYm</string>
    <string name="url2">Buy this at \: https://amzn.eu/d/4cXDtuC</string>
    <string name="url3">Buy this at \: https://amzn.eu/d/69q35QV</string>
    <string name="url4">Buy this at \: https://amzn.eu/d/c1xEeQ9</string>
    <string name="url5">Buy this at \: https://amzn.eu/d/dEPiImV</string>
    <string name="url6">Buy this at \: https://amzn.eu/d/c7RgjVW</string>


    <string name="about_intro">RentJunction is an innovative mobile application with its user-friendly interface and easy-to-navigate platform designed to streamline the process of finding, renting, and using essential items during a move. The app connects renters with service providers offering a wide range of products, including furniture, appliances, and tools, to enhance the new living spaces.</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="permission_not_granted">Location or SMS Permission not granted</string>
</resources>