<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducateCard2"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutEducate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBarEducate2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Important Things to Carry"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"
        app:navigationIcon="@drawable/back"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/appBarLayoutEducate2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.Pepper Spray"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text21"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/pepperSpray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url1"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.A Sharp Pencil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text22"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/sharpPencil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url2"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.Taser"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text23"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/taser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url3"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.Swiss Knife"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text24"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/swissKnife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url4"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.GPS Tracker"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text25"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/gpsTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url5"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6.Whistle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text26"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/whistle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url6"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>